Fixed modal bug with z-index

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -66,7 +66,7 @@
     justify-content: space-around;
     background: #fafafa;
     box-shadow: 0px 2px 10px 2px;
-    z-index: 999;
+    z-index: 998;
 }
 
 .sticky .logo-wrapper {
@@ -134,6 +134,7 @@ li:last-child span {
     @include flexCenterXY;
     opacity: 0;
     transition: opacity .3s;
+    z-index: 999;
 }
 
 .modal > div {
